Add 3D spherical harmonics functionality
- Add demo_3d.py: Simple demo for EEG to spherical harmonics conversion
- Add omneeg/transform_3d.py: Clean 3D spherical harmonics implementation

This PR adds the 3D spherical harmonics functionality to the roadmap,
providing a simple way to convert EEG data with montage to spherical
harmonics using PyShTools.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
 # Avoid to sync the data folder
 data/*
 
-# Byte-compiled / optimized / DLL files
+# Generated image files and test outputs
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.pdf
+
+# Test and validation files
+test_*.py
+validation_*.ipynb
+*_test.ipynb
+*_validation.ipynb
+
+# Development and temporary files
+.DS_Store
+.vscode/
 __pycache__/
 *.py[cod]
 *$py.class
