Add 3D spherical harmonics transform
- Add 3D transform support to omneeg/transform.py using pyshtools
- Update EEG loader in omneeg/io.py to support transform_type selection
- Add config_3d.yaml for 3D spherical harmonics configuration
- Add demo_3d.py to demonstrate 3D spherical harmonics

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Avoid to sync the data folder
 data/*
 
+# Ignore all plots
+plots/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -130,3 +133,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# UV lock file and pyproject.toml (managed by uv)
+uv.lock
+pyproject.toml
